# jobfather

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.deploy/: jobfather.yaml
.deploy/jobfather/: deployment.yaml  ingress.yaml  service.yaml
kubernetes/: job-template-crd.yaml  job-template-example.yaml  jobfather-operator-admin.yaml  jobfather-operator.yaml
src/: main.rs  metrics.rs  snapshot.rs
src/db/: archived_job.rs  job_output.rs  migrations.rs  mod.rs  snapshot.rs
src/kubernetes/: events.rs  job_create.rs  job_output.rs  job_template.rs  mod.rs  reconciler.rs  scheduler.rs
src/res/: styles.css
src/web/: api.rs  header.rs  job_detail.rs  job_output_api.rs  job_template_detail.rs  job_templates.rs  junit.rs  mcp.rs  mod.rs  snapshot_api.rs
