[package]
name = "jobfather"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
maud = "0.26"
kube = { version = "0.99", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
md5 = "0.7"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["metrics"] }
opentelemetry-prometheus = "0.14"
actix-web-opentelemetry = { version = "0.16", features = ["metrics", "metrics-prometheus"] }
prometheus = "0.13"
